--- a/index.html
+++ b/index.html
@@ -31,16 +31,15 @@
               <p style="text-align:center">
                 <a href="mailto:minar09.bd@gmail.com">Email</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?user=eQX-7Q4AAAAJ&hl=en" target="_blank">Google Scholar</a> &nbsp/&nbsp
-                <a href="https://github.com/minar09/" target="_blank">GitHub</a> &nbsp/&nbsp
+                <a href="https://github.com/minar09/" target="_blank">GitHub</a>
               </p>
 			  <p style="text-align:center">
                 <a href="https://linktr.ee/minar09/" target="_blank">Profiles</a> &nbsp/&nbsp
                 <a href="https://www.linkedin.com/in/minar09/" target="_blank">LinkedIn</a> &nbsp/&nbsp
-                <a href="https://linktr.ee/abuzayd09/" target="_blank">Social</a> &nbsp/&nbsp
+                <a href="https://linktr.ee/abuzayd09/" target="_blank">Social</a>
 			  </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <!--a href="images/MRMinar.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/Minar.png" class="hoverZoomLink"></a-->
               <img style="width:100%;max-width:100%" alt="profile photo" src="images/Matiur.png">
             </td>
           </tr>
@@ -82,10 +81,7 @@
               <br>
               <em>IEEE Access </em>, 2021 &nbsp <font color="red"><strong></strong></font>
               <br>
-              <!--a href="clothvtonplus/" target="_blank">project page</a> /  -->
               <a href="https://ieeexplore.ieee.org/document/9512041" target="_blank">paper</a> /
-              <!--a href="https://www.youtube.com/watch?v=11uJkUQc614" target="_blank">video</a> /
-              <!--a href="clothvtonplus/accv20_clothvton_slide.pdf" target="_blank">slide</a> / -->
               <a href="mpvton/bibtex.txt" target="_blank">bibtex</a>
               <p></p>
               <p>We proposed a novel approach for image-based multi-pose virtual try-on (VTON) for fashion clothing, utilizing a hybrid method for 3D clothing reconstruction from single image.</p>
@@ -110,8 +106,6 @@
               <br>
               <a href="clothvtonplus/" target="_blank">project page</a> /
               <a href="https://ieeexplore.ieee.org/document/9354778" target="_blank">paper</a> /
-              <!--a href="https://www.youtube.com/watch?v=11uJkUQc614" target="_blank">video</a> /
-              <!--a href="clothvtonplus/accv20_clothvton_slide.pdf" target="_blank">slide</a> / -->
               <a href="clothvtonplus/bibtex.txt" target="_blank">bibtex</a>
               <p></p>
               <p>We proposed a novel hybrid and fully automatic method for 3D clothing reconstruction from single image and applying it to image-based virtual try-on (VTON) for fashion clothing, which generates realistically deformed try-on results with superior quality.</p>
@@ -123,7 +117,7 @@
               <img src="images/research.png" alt="project image" style="width:auto; height:auto; max-width:100%;">
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-				<!--span style="color:red; font-weight:bold;">[New]</span-->
+				
               <a href="clothvton/" target="_blank">
 				<!--img src="images/new.gif"-->
                 <papertitle>CloTH-VTON: Clothing Three-dimensional reconstruction for Hybrid image-based Virtual Try-ON</papertitle>
@@ -139,7 +133,6 @@
               <a href="https://openaccess.thecvf.com/content/ACCV2020/papers/Minar_CloTH-VTON_Clothing_Three-dimensional_reconstruction_for_Hybrid_image-based_Virtual_Try-ON_ACCV_2020_paper.pdf" target="_blank">paper</a> /
               <a href="https://openaccess.thecvf.com/content/ACCV2020/supplemental/Minar_CloTH-VTON_Clothing_Three-dimensional_ACCV_2020_supplemental.PDF" target="_blank">supplementary</a> /
               <a href="https://www.youtube.com/watch?v=11uJkUQc614" target="_blank">video</a> /
-              <!--a href="clothvton/accv20_clothvton_slide.pdf" target="_blank">slide</a> / -->
               <a href="clothvton/bibtex.txt" target="_blank">bibtex</a>
               <p></p>
               <p>We proposed a novel hybrid and fully automatic method for 3D clothing reconstruction from single image and applying it to image-based virtual try-on (VTON) for fashion clothing, which generates realistically deformed try-on results with the highest possible quality.</p>
